--- a/explore.ipynb
+++ b/explore.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -159,19 +159,19 @@
        "4       -1.560110  0.130568 -0.061697  0.161530   820.0  20.419409  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_part0 = pd.read_csv('dataset/features/part-00000-e6120af0-10c2-4248-97c4-81baf4304e5c-c000.csv')\n",
-    "df_part0.head()"
+    "df = pd.read_csv('dataset/features/part-00000-e6120af0-10c2-4248-97c4-81baf4304e5c-c000.csv')\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -357,18 +357,18 @@
        "max    3.383183e+01  6.193165e+08  5.055000e+01  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_part0.describe()"
+    "df.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,59 @@
     }
    ],
    "source": [
-    "count_nulls(df_part0)"
+    "count_nulls(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bookingID           int64\n",
+       "Accuracy          float64\n",
+       "Bearing           float64\n",
+       "acceleration_x    float64\n",
+       "acceleration_y    float64\n",
+       "acceleration_z    float64\n",
+       "gyro_x            float64\n",
+       "gyro_y            float64\n",
+       "gyro_z            float64\n",
+       "second            float64\n",
+       "Speed             float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# str_target_var=\"bookingId\"\n",
+    "# ls_num_data = [col for col in df.columns if df[col].dtype != \"object\" and col != str_target_var]\n",
+    "# ncols = 3\n",
+    "# nrows = int(math.ceil(len(ls_num_data) * 1.0 / ncols))\n",
+    "# fig, axes = plt.subplots(nrows=nrows, ncols=ncols, figsize=(15, 30))\n",
+    "\n",
+    "# # Visualization of numerical data\n",
+    "# for idx, var in enumerate(ls_num_data):\n",
+    "#     i = idx / ncols\n",
+    "#     j = idx % ncols\n",
+    "#     axes[i, j].get_xaxis().get_label().set_visible(False)\n",
+    "#     df.boxplot(column=var, by=str_target_var, ax=axes[i, j])\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = df['Speed'].plot.kde(bw_method=0.3)"
    ]
   },
   {
