--- a/explore.ipynb
+++ b/explore.ipynb
@@ -434,7 +434,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -481,6 +483,156 @@
    "outputs": [],
    "source": [
     "ax = df['Speed'].plot.kde(bw_method=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.count of             bookingID  Accuracy  Bearing  acceleration_x  acceleration_y  \\\n",
+       "0        1.202591e+12       3.0    353.0        1.228867          8.9001   \n",
+       "1                 NaN       NaN      NaN             NaN             NaN   \n",
+       "2                 NaN       NaN      NaN             NaN             NaN   \n",
+       "3                 NaN       NaN      NaN             NaN             NaN   \n",
+       "4                 NaN       NaN      NaN             NaN             NaN   \n",
+       "5                 NaN       NaN      NaN             NaN             NaN   \n",
+       "6                 NaN       NaN      NaN             NaN             NaN   \n",
+       "7                 NaN       NaN      NaN             NaN             NaN   \n",
+       "8                 NaN       NaN      NaN             NaN             NaN   \n",
+       "9                 NaN       NaN      NaN             NaN             NaN   \n",
+       "10                NaN       NaN      NaN             NaN             NaN   \n",
+       "11                NaN       NaN      NaN             NaN             NaN   \n",
+       "12                NaN       NaN      NaN             NaN             NaN   \n",
+       "13                NaN       NaN      NaN             NaN             NaN   \n",
+       "14                NaN       NaN      NaN             NaN             NaN   \n",
+       "15                NaN       NaN      NaN             NaN             NaN   \n",
+       "16                NaN       NaN      NaN             NaN             NaN   \n",
+       "17                NaN       NaN      NaN             NaN             NaN   \n",
+       "18                NaN       NaN      NaN             NaN             NaN   \n",
+       "19                NaN       NaN      NaN             NaN             NaN   \n",
+       "20                NaN       NaN      NaN             NaN             NaN   \n",
+       "21                NaN       NaN      NaN             NaN             NaN   \n",
+       "22                NaN       NaN      NaN             NaN             NaN   \n",
+       "23                NaN       NaN      NaN             NaN             NaN   \n",
+       "24                NaN       NaN      NaN             NaN             NaN   \n",
+       "25                NaN       NaN      NaN             NaN             NaN   \n",
+       "26                NaN       NaN      NaN             NaN             NaN   \n",
+       "27                NaN       NaN      NaN             NaN             NaN   \n",
+       "28                NaN       NaN      NaN             NaN             NaN   \n",
+       "29                NaN       NaN      NaN             NaN             NaN   \n",
+       "...               ...       ...      ...             ...             ...   \n",
+       "1613524           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613525           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613526           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613527           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613528           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613529           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613530           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613531           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613532           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613533           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613534           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613535           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613536           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613537           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613538           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613539           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613540           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613541           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613542           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613543           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613544           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613545           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613546           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613547           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613548           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613549           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613550           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613551           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613552           NaN       NaN      NaN             NaN             NaN   \n",
+       "1613553           NaN       NaN      NaN             NaN             NaN   \n",
+       "\n",
+       "         acceleration_z    gyro_x    gyro_y    gyro_z  second  Speed  \n",
+       "0              3.986968  0.008221  0.002269 -0.009966  1362.0    0.0  \n",
+       "1                   NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "2                   NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "3                   NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "4                   NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "5                   NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "6                   NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "7                   NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "8                   NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "9                   NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "10                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "11                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "12                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "13                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "14                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "15                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "16                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "17                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "18                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "19                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "20                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "21                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "22                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "23                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "24                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "25                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "26                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "27                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "28                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "29                  NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "...                 ...       ...       ...       ...     ...    ...  \n",
+       "1613524             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613525             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613526             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613527             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613528             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613529             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613530             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613531             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613532             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613533             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613534             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613535             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613536             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613537             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613538             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613539             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613540             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613541             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613542             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613543             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613544             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613545             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613546             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613547             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613548             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613549             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613550             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613551             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613552             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "1613553             NaN       NaN       NaN       NaN     NaN    NaN  \n",
+       "\n",
+       "[1613554 rows x 11 columns]>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter = df[\"bookingID\"]==1202590843006\n",
+    "  \n",
+    "# filtering data \n",
+    "df.where(filter, inplace = True) \n",
+    "df.count"
    ]
   },
   {
