--- a/explore.ipynb
+++ b/explore.ipynb
@@ -1537,7 +1537,7 @@
     "df6 = pd.read_csv('dataset/features/part-00006-e6120af0-10c2-4248-97c4-81baf4304e5c-c000.csv')\n",
     "df7 = pd.read_csv('dataset/features/part-00007-e6120af0-10c2-4248-97c4-81baf4304e5c-c000.csv')\n",
     "df8 = pd.read_csv('dataset/features/part-00008-e6120af0-10c2-4248-97c4-81baf4304e5c-c000.csv')\n",
-    "df9 = pd.read_csv('dataset/features/part-00009-e6120af0-10c2-4248-97c4-81baf4304e5c-c000.csv')\n"
+    "df9 = pd.read_csv('dataset/features/part-00009-e6120af0-10c2-4248-97c4-81baf4304e5c-c000.csv')"
    ]
   },
   {
@@ -1575,21 +1575,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "\n",
+    "path = r'dataset/features' # use your path\n",
+    "all_files = glob.glob(path + \"/*.csv\")\n",
+    "\n",
+    "li = []\n",
+    "\n",
+    "for filename in all_files:\n",
+    "    df = pd.read_csv(filename, index_col=None, header=0)\n",
+    "    li.append(df)\n",
+    "\n",
+    "frame = pd.concat(li, axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(103, 11)"
+       "(16135561, 11)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "frame.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1151, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(frame[frame[\"bookingID\"]==1202590843006].shape)"
+   ]
   },
   {
    "cell_type": "code",
