--- a/explore.ipynb
+++ b/explore.ipynb
@@ -1635,7 +1635,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "frame[\"second\"].max())"
+   ]
   }
  ],
  "metadata": {
